--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.4.0",
     "firebase-functions": "^5.1.1",
+    "google-auth-library": "^9.14.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "nodemon": "^3.1.4"
